<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item  android:id="@+id/item_Home"
            android:title="@string/item_Home"
            app:showAsAction="always"
            android:visible="true"
            android:icon="@mipmap/home"
            android:enabled="true" />



        <item  android:id="@+id/item_galery"
            android:icon="@mipmap/order"
            android:title="@string/item_Progress"/>



        <item android:id="@+id/item_info"
            android:title="@string/item_MyInfo"
            android:icon="@mipmap/notif"
            android:visible="true"
            android:enabled="true"
            android:checkable="true" />



        <item android:id="@+id/item_about"
            android:title="@string/about"
            android:icon="@mipmap/about"
            android:visible="true"
            android:enabled="true"
            android:checkable="true" />



        <item android:id="@+id/item_contac"
            android:title="@string/item_contact"
            android:icon="@mipmap/callus"
            android:visible="true"
            android:enabled="true"
            android:checkable="true" />




    </group>
</menu>