<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:focusable="true"
    android:focusableInTouchMode="true"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/green"
 />



                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawableLeft="@mipmap/avatar"
                    android:drawablePadding="16dp"
                    android:textColorHint="@android:color/darker_gray"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:paddingBottom="16dp"
                    />




            <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/key"
                android:drawablePadding="16dp"
                    android:ems="10"
                    android:textColorHint="@android:color/darker_gray"

                    android:textColor="@android:color/darker_gray"

                    android:hint="@string/pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingBottom="16dp"
                   />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/forget_pass"
                android:text="@string/pwd_oublie"
                android:textColor="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="0.5"

                    android:layout_marginTop="15dp"
                    android:background="@drawable/pink_rectangle"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:background="@null"
                    android:text="@string/register"
                    android:textColor="@android:color/darker_gray"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>