<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imUser"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginBottom="10dp"

                android:src="@drawable/bg"
                app:civ_border_color="@android:color/white"
                android:layout_gravity="center" />

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etName"

                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:textSize="@dimen/activity_size"
                android:drawablePadding="@dimen/activity_drawable_padding"
                android:hint="@string/text_fname"
                android:background="@drawable/round_black_rect_shape"
                android:layout_marginBottom="10dp" />


            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"

                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/round_black_rect_shape"
                android:drawablePadding="@dimen/activity_drawable_padding"
                android:ems="10"
                android:id="@+id/etPhone"
                android:hint="@string/txt_phone"
                android:textSize="@dimen/activity_drawable_padding"
                android:layout_marginBottom="10dp" />

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"

                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/round_black_rect_shape"
                android:drawablePadding="@dimen/activity_drawable_padding"
                android:ems="10"
                android:id="@+id/etPhoneHome"
                android:hint="@string/text_home_phone"
                android:textSize="@dimen/activity_size"
                android:layout_marginBottom="10dp" />

            <com.coaching.tennis.tenniscoaching.custom.CustomTextView
                android:text="@string/txt_change_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="16dp"
                android:id="@+id/textView2" />

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/activity_drawable_padding"
                android:ems="10"

                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/round_black_rect_shape"
                android:textSize="@dimen/activity_size"
                android:id="@+id/etPassword"
                android:hint="@string/text_password"
                android:layout_marginBottom="10dp" />

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_size"
                android:inputType="textPassword"

                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/round_black_rect_shape"
                android:drawablePadding="@dimen/activity_drawable_padding"
                android:ems="10"
                android:id="@+id/etReTypePassword"
                android:hint="@string/text_retype_password"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">


                <com.coaching.tennis.tenniscoaching.custom.CustomButton
                    android:id="@+id/btnregp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/full_roundrectangle_blue"
                    android:paddingBottom="20dp"
                    android:textAllCaps="false"
                    android:paddingTop="20dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txt_save"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:textStyle="bold" />

                <com.coaching.tennis.tenniscoaching.custom.CustomButton
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textAllCaps="false"
                    android:background="@drawable/full_roundrectangle_darkgrey"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/txt_back"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/activity_horizontal_margin"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>