
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="vertical">


            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nom"
                android:background="@drawable/rectangle"
                android:id="@+id/et_FullName"
                android:maxLines="1"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="6dp"
                android:paddingStart="6dp" />

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:background="@drawable/rectangle"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:id="@+id/et_Email"/>

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_phone"
                android:inputType="phone"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="6dp"
                android:paddingStart="6dp"
                android:background="@drawable/rectangle"
                android:maxLines="1"
                android:id="@+id/et_PhoneNumber"/>

            <com.coaching.tennis.tenniscoaching.custom.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle"
                android:inputType="text"
                android:lineSpacingExtra="8sp"
                android:maxLines="15"
                android:minHeight="100dp"
                android:id="@+id/et_FeedBack"
                android:layout_marginBottom="16dp" />

            <com.coaching.tennis.tenniscoaching.custom.CustomButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/pink_rectangle"
                android:text="@string/txt_envoyer"
                android:textColor="@android:color/white"
                android:id="@+id/btn_SendComplain"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="34dp"
                android:gravity="center">

                <com.coaching.tennis.tenniscoaching.custom.CustomTextView
                    android:text="@string/txt_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/textView2"
                    android:gravity="center"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_facebook"
                    android:id="@+id/fcb"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_twitter"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/twitter"  />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/insta"
                    android:id="@+id/insta"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>

